# pcl_manipulation

./: CMakeLists.txt  README.md  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
include/pcl_manipulation/: arm5e_pc_grasp_planning_server.h
launch/: ARM5.urdf  arm5e_pc_grasp_planning.launch  arm5e_pc_grasp_planning.yaml  benchmark.launch  grasp_exec.launch  grasp_planning_with_arm.launch  list_test.launch  real_robot_description.launch  robot_description.launch  uwsim_stereo_amphora.launch
resources/: arm5e_arm.urdf  arm5e_arm.xml  arm5e_gripper.urdf  arm5e_gripper.xml  arm5e_gripper_bak.urdf  arm5e_gripper_blue.urdf  arm5e_gripper_original.urdf  arm5e_gripper_red.urdf
src/: KDLToTFtest.cpp  VispToTFtest.cpp  arm5_grasp_exec.cpp  arm5_grasp_ik.cpp  arm5_grasp_vehicle_ik.cpp  arm5e_pc_grasp_planning.cpp  arm5e_pc_grasp_planning_server.cpp  benchmark.cpp  cylinder.cpp  forward_kinematics.cpp  grasp_exec.cpp  grasp_planning_with_arm.cpp  gt_grasp_exec.cpp  list_test.cpp  save_cloud.cpp  test_pcl.cpp
srv/: DetectObject.srv
